Fixing books/authors font size on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -147,10 +147,6 @@ div.books td {
   /*line-height: 1.5em;*/
 }
 
-.author {
-  font-size: 16px;
-}
-
 .content {
   /*margin-bottom: 2em;*/
 }
@@ -206,7 +202,23 @@ code {
   /*padding: 15px;*/
 	padding: 0px;
 	font-size: 17.5px;
+	@media screen and (max-width: 500px) {
+    font-size: 15.5px;
+	}
+	@media screen and (max-width: 400px) {
+    font-size: 13.5px;
+	}
 	font-weight: 400;
+}
+
+.author {
+  font-size: 16px;
+	@media screen and (max-width: 500px) {
+    font-size: 14.5px;
+	}
+	@media screen and (max-width: 400px) {
+    font-size: 12.5px;
+	}
 }
 
 .post-list {
